// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiCardSelect is rendered 1`] = `
<button
  aria-checked="false"
  aria-label="aria-label"
  class="euiButtonEmpty euiButtonEmpty--text euiButtonEmpty--xSmall euiCardSelect euiCardSelect--text testClass1 testClass2"
  data-test-subj="test subject string"
  role="switch"
  type="button"
>
  <span
    class="euiButtonEmpty__content"
  >
    <span
      class="euiButtonEmpty__text"
    >
      Select
    </span>
  </span>
</button>
`;

exports[`EuiCardSelect props can override color 1`] = `
<button
  aria-checked="false"
  class="euiButtonEmpty euiButtonEmpty--danger euiButtonEmpty--xSmall euiCardSelect euiCardSelect--danger"
  role="switch"
  type="button"
>
  <span
    class="euiButtonEmpty__content"
  >
    <span
      class="euiButtonEmpty__text"
    >
      Select
    </span>
  </span>
</button>
`;

exports[`EuiCardSelect props can override text 1`] = `
<button
  aria-checked="false"
  class="euiButtonEmpty euiButtonEmpty--text euiButtonEmpty--xSmall euiCardSelect euiCardSelect--text"
  role="switch"
  type="button"
>
  <span
    class="euiButtonEmpty__content"
  >
    <span
      class="euiButtonEmpty__text"
    >
      Custom text
    </span>
  </span>
</button>
`;

exports[`EuiCardSelect props isDisabled 1`] = `
<button
  aria-checked="false"
  class="euiButtonEmpty euiButtonEmpty--text euiButtonEmpty--xSmall euiCardSelect euiCardSelect--text"
  disabled=""
  role="switch"
  type="button"
>
  <span
    class="euiButtonEmpty__content"
  >
    <span
      class="euiButtonEmpty__text"
    >
      Unavailable
    </span>
  </span>
</button>
`;

exports[`EuiCardSelect props isSelected 1`] = `
<button
  aria-checked="true"
  class="euiButtonEmpty euiButtonEmpty--text euiButtonEmpty--xSmall euiCardSelect euiCardSelect--success"
  role="switch"
  type="button"
>
  <span
    class="euiButtonEmpty__content"
  >
    <svg
      aria-hidden="true"
      aria-labelledby="title"
      class="euiIcon euiIcon--medium euiIcon-isLoading euiButtonEmpty__icon"
      focusable="false"
      height="16"
      role="img"
      viewBox="0 0 16 16"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    />
    <span
      class="euiButtonEmpty__text"
    >
      Selected
    </span>
  </span>
</button>
`;
